fix(sidebar): onload layout animation shift - moving the wtq-motion to lower level - blocking motion in links through wtq-no-motion

--- a/packages/wathqny/src/styles/wathqny.css
+++ b/packages/wathqny/src/styles/wathqny.css
@@ -871,6 +871,9 @@
     transition-timing-function: ease;
   }
 
+  .wtq-no-motion {
+    transition: none 0ms;
+  }
   .wtq-highlight {
     background-color: color-mix(in oklch, var(--medium) 10%, transparent);
     color: var(--darkest);
